# aiosalesforce

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: build-docs.yml  lint.yml  publish.yml  test.yml
api-reference/auth/: index.html
api-reference/client/: index.html
api-reference/composite/batch/: index.html
api-reference/composite/client/: index.html
api-reference/composite/composite/: index.html
api-reference/composite/exceptions/: index.html
api-reference/events/: index.html
api-reference/exceptions/: index.html
api-reference/retries/: index.html
api-reference/sobject/: index.html
api-reference/utils/: index.html
docs/: index.md
docs/api-reference/: auth.md  client.md  events.md  exceptions.md  retries.md  salesforce-client.md  sobject-client.md  sobject.md  utils.md
docs/api-reference/composite/: batch.md  client.md  composite.md  exceptions.md
docs/documentation/: authentication.md  client.md  introduction.md  sobject.md  soql.md
docs/documentation/bulk/: v1.md  v2.md
docs/documentation/composite/: batch.md  composite.md  overview.md
documentation/authentication/: index.html
documentation/bulk/v1/: index.html
documentation/bulk/v2/: index.html
documentation/client/: index.html
documentation/composite/batch/: index.html
documentation/composite/composite/: index.html
documentation/composite/overview/: index.html
documentation/introduction/: index.html
documentation/sobject/: index.html
documentation/soql/: index.html
search/: search_index.json
src/aiosalesforce/: __init__.py  client.py  exceptions.py  sobject.py  utils.py
src/aiosalesforce/auth/: __init__.py  base.py  client_credentials_flow.py  jwt_bearer_flow.py  jwt_flow.py  soap.py
src/aiosalesforce/bulk/: __init__.py  _csv.py  client.py
src/aiosalesforce/composite/: __init__.py  batch.py  client.py  composite.py  exceptions.py
src/aiosalesforce/events/: __init__.py  event_bus.py  events.py
tests/: conftest.py  test_auth.py  test_events.py  test_exceptions.py  test_retries.py  test_utils.py
tests/test_client/: conftest.py  test_client.py  test_sobject.py
(+19 files in other folders)
